# emailclient

./: .gitignore  CMakeLists.txt  FolderListDelegate.qml  MailContent.qml  MailHeader.qml  MailList.qml  MailStructure.cpp  curlresponse.cpp  dbengine.cpp  mailengine.cpp  mailengine_test.cpp  mailsettings.cpp  mailtest.cpp  mailtest.h  main.cpp  main.qml  readme.md  utils.cpp
include/: MailStructure.h  dbengine.h  imaprequests.h  mail.h  mailengine.h  mailsettings.h  utils.h
include/models/: foldermodel.h  mailmodel.h  modelfactory.h
include/parsers/imap/: bodystructure.h  bodystructures.h  capability.h  examine.h  flags.h  folderlist.h  mailheader.h  uid.h
src/: imaprequests.cpp  mailengine.cpp  mailsettings.cpp  utils.cpp
src/models/: foldermodel.cpp  mailmodel.cpp  modelfactory.cpp
src/parsers/imap/: bodystructure.cpp  bodystructures.cpp  capability.cpp  examine.cpp  flags.cpp  folderlist.cpp  mailheader.cpp  uid.cpp
tests/: gmail_integration_tests.cpp  mailengine_test.cpp  mailstructure_test.cpp  misc_test.cpp
